# unilang

./: .gitignore  Cargo.toml  README.md  license  mem_safe_notes.md
docs/: pipeline.dot
examples/: arith.ul  assign.ul  defer.ul  droppable_and_no_drop.ul  empty.ul  enum_ideas.ul  for_iter.ul  for_iter_tuple.ul  for_range_iter.ul  funcall.ul  generic.ul  hello_world.ul  ifstmt.ul  impl.ul  iter_test.ul  main.ul  mod_test.ul  new_and_defer.ul  nodrop_warn.ul  opt_test.ul  printf_test.ul  ptr_arith.ul  range_iter.ul  rec_interface.ul  recursion.ul  simple_class.ul  specialized_impl.ul  test_drop.ul  test_drop_override1.ul  test_drop_override2.ul  tuple.ul  unused_class.ul  var.ul  vec_test.ul  while.ul
examples/include_test/: a.ul  b.ul
examples/simple_class/: assign_test.ul  autoderef.ul  cons_matching.ul  constructor.ul  new.ul  simple_mehod.ul
src/: main.rs
src/clir/: mod.rs
src/common/: config.rs  context.rs  errors.rs  global_interner.rs  mod.rs  source_location.rs
src/lexer/: lexer.rs  mod.rs  rules.rs  token.rs
src/mono_ir/: mod.rs  mono_ir_pass.rs
src/nir/: context.rs  global_interner.rs  include_resolver.rs  interner.rs  mod.rs  nir.rs  visitor.rs
src/parser/: ast.rs  parser.rs
src/ty/: concrete_type.rs  displays.rs  expr_translator.rs  mod.rs  name_mangler.rs  pass.rs  scope.rs  specialized_class.rs  surface_resolution.rs  tir.rs  tir_pass.rs  type_checker.rs
src/ty/auto_impl/: droppable.rs  mod.rs  no_drop.rs
std/: alloc.ul  int.ul  io.ul  iter.ul  mem.ul  opt.ul  range_iter.ul  sys.ul  vec.ul  vec_iter.ul
