[package]
name = "unilang"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap_derive = "4.0"
clap = { version = "4.0", features = ["derive"] }
escape_string = "0.1.2"
nonempty = "0.12.0"
regex = "1.11.2"
rustc-literal-escaper = "0.0.4"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm20-1"] }
unescape = "0.1.0"



[profile.release]
# strip=true
# lto = true
